# pe-hackathon

./: .coverage  .env.example  .gitignore  DEMO_SCRIPT.md  DEVPOST.md  Dockerfile  Dockerfile.webhook  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alertmanager/: alertmanager.yml
app/: __init__.py  cache.py  database.py  logging_config.py  metrics.py  seed.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: events.py  urls.py  users.py
app/utils/: short_code.py  validators.py
docs/: alert-pipeline.md  api.md  architecture.md  bottleneck-report.md  capacity-plan.md  chaos-engineering.md  decision-log.md  deployment.md  environment-variables.md  failure-modes.md  incident-diagnosis.md  runbook.md  troubleshooting.md
evidence/evidence/: EVIDENCE_SUMMARY.txt  alert_HostHighCpuUsage_firing_2026-04-05T02-51-04.895969Z.json  alert_ServiceDown_firing_2026-04-05T02-44-11.185348Z.json  alert_ServiceDown_firing_2026-04-05T02-49-26.170881Z.json  alert_ServiceDown_resolved_2026-04-05T02-47-11.176845Z.json  (+1 more)
nginx/: nginx.conf
prometheus/: alert_rules.yml  prometheus.yml
scripts/: add_indexes.py  autofill-submission.js  setup-droplet.sh  webhook-receiver.py
seed_data/: events.csv  urls.csv  users.csv
tests/: conftest.py  test_api_contract.py  test_cache.py  test_edge_cases.py  test_error_handlers.py  test_events.py  test_health.py  test_integration.py  test_metrics.py  test_reliability_hardening.py  test_short_code.py  test_urls.py  test_user_edge_cases.py  test_users.py  test_validators.py
(+41 files in other folders)
